# Breweries_case

./: .gitignore  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
dags/: pipeline_dag.py
docker/airflow/: Dockerfile
src/breweries/bronze/: ingestion.py
src/breweries/dags/: quality_gate.py
src/breweries/gold/: aggregate.py  gold_breweries.py  reader.py  writer.py
src/breweries/operators/: bronze_ingestion_operator.py
src/breweries/silver/: quality.py  quality_schema.py  read_bronze.py  schema.py  silver_breweries.py  transform.py  writer.py
src/breweries/utils/: extraction_func.py  local_metadata.py  local_writer.py  metadata_writer.py  quality_writer.py  read_local.py
src/tests/: conftest.py
src/tests/dags/: conftest.py  test_quality_gate.py
src/tests/integration/: conftest.py  test_quality_failed_flow.py  test_silver_to_gold_pipeline.py
src/tests/unit/: conftest.py
src/tests/unit/bronze/: test_ingestion.py
src/tests/unit/gold/: test_aggregation.py
src/tests/unit/silver/: test_tranform.py  test_validation.py
src/tests/unit/utils/: test_extraction_func.py  test_pagination.py  test_retry_fail.py  test_unexpected_response.py
